add hearder image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link rel="icon" type="image/jpeg" href="image/hearder_image.jpeg"/>
+
+
+<div class="hero-image"> 
+        <div class="image-text">
+           <div class="top-text"></div>
+            <div class="bottom-text">COVID-19 GOT YOU STRESSED?</div>
+        </div>
+</div>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -63,6 +72,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -385,8 +395,6 @@ div.tocify {
 </div>
 
 
-<p><strong>Fei Xiao Kelly Luo Tongtong Zhu Yi Fang Yujie
-Huang</strong></p>
 <p><strong>Welcome to Our Project for P8105!</strong></p>
 <p><strong><em>Mental Health</em></strong></p>
 <p>is an important part of overall health and well-being. Mental health
@@ -406,6 +414,15 @@ means of suicide?</li>
 </ul>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
+<p><strong>Mental Health Quiz </strong></p>
+<p>There are still many harmful attitudes and misunderstandings around
+mental illness, which may make people ignore their mental health, fuel
+stigma, and make it harder to reach out for help. Take the following
+quiz and see if you can separate the myths from the facts.</p>
+<p><a href="https://www.cdc.gov/mentalhealth/quiz/index.htm">Mental
+Health Quiz</a></p>
+<p><strong>Fei Xiao Kelly Luo Tongtong Zhu Yi Fang Yujie
+Huang</strong></p>
 
 
 
