--- a/index.html
+++ b/index.html
@@ -343,6 +343,12 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="https://youtube.com">
+    <span class="fa fa-play-circle fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
@@ -395,14 +401,17 @@ div.tocify {
 </div>
 
 
+<p> </p>
 <p><strong>Welcome to Our Project for P8105!</strong></p>
-<p><strong><em>Mental Health</em></strong></p>
-<p>is an important part of overall health and well-being. Mental health
-includes our emotional, psychological, and social well-being. Mental
-health problems exist frequently throughout the United States. About one
-in five adults suffer from a diagnosable mental illness in a given year.
-Many common mental illnesses, such as depression, anxiety, bipolar
-disorder, may increase risk of suicide.</p>
+<p> </p>
+<div id="mental-health" class="section level3">
+<h3>Mental Health</h3>
+<p>Mental health is an important part of overall health and well-being.
+Mental health includes our emotional, psychological, and social
+well-being. Mental health problems exist frequently throughout the
+United States. About one in five adults suffer from a diagnosable mental
+illness in a given year. Many common mental illnesses, such as
+depression, anxiety, bipolar disorder, may increase risk of suicide.</p>
 <p><strong>So…</strong></p>
 <ul>
 <li>What is the general status of mental illness across states in the
@@ -414,15 +423,22 @@ means of suicide?</li>
 </ul>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
-<p><strong>Mental Health Quiz </strong></p>
+</div>
+<div id="mental-health-quiz" class="section level3">
+<h3>Mental Health Quiz</h3>
 <p>There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
 quiz and see if you can separate the myths from the facts.</p>
 <p><a href="https://www.cdc.gov/mentalhealth/quiz/index.htm">Mental
 Health Quiz</a></p>
+<p><img src="image/mental%20health%20quiz%20pics.png" alt="drawing" longth="650" width="500"></p>
+</div>
+<div id="our-team" class="section level3">
+<h3>Our Team</h3>
 <p><strong>Fei Xiao Kelly Luo Tongtong Zhu Yi Fang Yujie
 Huang</strong></p>
+</div>
 
 
 
