--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ Health Quiz</a></p>
 </div>
 <div id="our-team" class="section level3">
 <h3>Our Team</h3>
-<p><strong>Fei Xiao Kelly Luo Tongtong Zhu Yi Fang Yujie
+<p><strong>Fei Xiao, Kelly Luo, Tongtong Zhu, Yi Fang, Yujie
 Huang</strong></p>
 </div>
 
