--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@ means of suicide?</li>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
 </div>
-<div id="mental-health-quiz" class="section level3">
-<h3>Mental Health Quiz</h3>
+<div id="mental-health-self-diagnosis" class="section level3">
+<h3>Mental Health Self-Diagnosis</h3>
 <p>There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
