update questions on home page

--- a/index.html
+++ b/index.html
@@ -446,10 +446,14 @@ depression, anxiety, bipolar disorder, may increase risk of suicide.</p>
 <ul>
 <li>What is the general status of mental illness across states in the
 US?</li>
-<li>What is the overall trend of suicide rate in the US across
-years?</li>
-<li>What is the difference in suicide rate by state, age, gender, and
-means of suicide?</li>
+<li>What is the overall trend of the percentage, frequency and level of
+anxiety and depression in the US across years?</li>
+<li>How do trends in anxiety and depression percentages differ by
+biological sex, household income, marital status, and age?</li>
+<li>What is the overall suicide trend across years? How does suicide
+differ by state, age, sex and means?</li>
+<li>What is the association between taking depression or anxious
+medication and COVID-19 exposure?</li>
 </ul>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
