update analysis pathway

--- a/data_process.html
+++ b/data_process.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -38,6 +38,7 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="image/icons-brain.png"/>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -346,7 +347,10 @@ div.tocify {
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+        <li>
+  <a href="data_process.html">Data Processing </a>
+</li>
+<li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Exploratory Analyses
      
@@ -354,16 +358,16 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="analysis/exploratory_analysis/anxiety_report.html">Anxiety</a>
+      <a href="mental_illness_report.html">Mental Illness</a>
     </li>
     <li>
-      <a href="analysis/exploratory_analysis/depression_report.html">Depression</a>
+      <a href="anxiety_report.html">Anxiety</a>
     </li>
     <li>
-      <a href="analysis/exploratory_analysis/mental_illness_report.html">Mental Illness</a>
+      <a href="depression_report.html">Depression</a>
     </li>
     <li>
-      <a href="analysis/exploratory_analysis/suicide_report.html">Suicide</a>
+      <a href="suicide_report.html">Suicide</a>
     </li>
   </ul>
 </li>
@@ -375,13 +379,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="analysis/statistical_analysis/anxiety_model.html">Anxiety</a>
+      <a href="anxiety_model.html">Anxiety</a>
     </li>
     <li>
-      <a href="analysis/statistical_analysis/depression_model.html">Depression</a>
+      <a href="depression_model.html">Depression</a>
     </li>
     <li>
-      <a href="analysis/statistical_analysis/suicide_model.html">Suicide</a>
+      <a href="suicide_model.html">Suicide</a>
     </li>
   </ul>
 </li>
@@ -393,21 +397,21 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="analysis/dashbboards/anxiety_trend_dashboard.html">Anxiety Trend</a>
+      <a href="mental_dashboard.html">Mental Illness</a>
     </li>
     <li>
-      <a href="analysis/dashbboards/depression_trend_dashboard.html">Depression Trend</a>
+      <a href="anxiety_trend_dashboard.html">Anxiety Trend</a>
     </li>
     <li>
-      <a href="analysis/dashbboards/suicide_dashboard.html">Suicide Trend</a>
+      <a href="depression_trend_dashboard.html">Depression Trend</a>
     </li>
     <li>
-      <a href="analysis/dashbboards/mental_dashboard.html">Mental Illness</a>
+      <a href="suicide_dashboard.html">Suicide Trend</a>
     </li>
   </ul>
 </li>
 <li>
-  <a href="analysis/project_report.html">Project Report</a>
+  <a href="project_report.html">Project Report</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
