--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -239,9 +238,6 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
-<style type="text/css">
-.code-folding-btn { margin-bottom: 4px; }
-</style>
 
 
 
@@ -428,14 +424,6 @@ div.tocify {
 
 <div id="header">
 
-<div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
-<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
-<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
-<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
-</ul>
-</div>
-
 
 
 <h1 class="title toc-ignore">Mental Health Post COVID-19 Pandemic</h1>
@@ -443,9 +431,51 @@ div.tocify {
 </div>
 
 
-<p> </p>
-<p><strong>Welcome to Our Project for P8105!</strong></p>
-<p> </p>
+<div id="welcome-to-our-project-for-p8105" class="section level2">
+<h2>Welcome to Our Project for P8105!</h2>
+<table>
+<colgroup>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center"><a href="analysis/project_report.html"><img
+src="image/1.jpg" height="200" alt="1" /></a></th>
+<th align="center"><a href="analysis/project_report.html"><img
+src="image/2.jpg" height="200" alt="2" /></a></th>
+<th align="center"><a href="analysis/project_report.html"><img
+src="image/3.jpg" height="200" alt="3" /></a></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><a
+href="analysis/project_report.html"><em>Motivation</em></a></td>
+<td align="center"><a href="analysis/project_report.html"><em>Mental
+Health Self-Diagnosis</em></a></td>
+<td align="center"><a href="analysis/project_report.html"><em>Data
+Source</em></a></td>
+</tr>
+<tr class="even">
+<td align="center"><a href="analysis/project_report.html"><img
+src="image/4.jpg" height="200" alt="4" /></a></td>
+<td align="center"><a href="analysis/project_report.html"><img
+src="image/5.jpg" height="200" alt="5" /></a></td>
+<td align="center"><a href="analysis/project_report.html"><img
+src="image/6.jpg" height="200" alt="6" /></a></td>
+</tr>
+<tr class="odd">
+<td align="center"><a
+href="analysis/project_report.html"><em>4</em></a></td>
+<td align="center"><a
+href="analysis/project_report.html"><em>5</em></a></td>
+<td align="center"><a href="analysis/project_report.html"><em>Our
+Team</em></a></td>
+</tr>
+</tbody>
+</table>
 <div id="motivation" class="section level3">
 <h3>Motivation</h3>
 <p>Mental health is an important part of overall health and well-being.
@@ -485,6 +515,7 @@ Health Quiz</a></p>
 <p><strong>Fei Xiao, Kelly Luo, Tongtong Zhu, Yi Fang, Yujie
 Huang</strong></p>
 </div>
+</div>
 
 
 
@@ -521,11 +552,6 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
-<script>
-$(document).ready(function () {
-  window.initializeCodeFolding("hide" === "show");
-});
-</script>
 
 <script>
 $(document).ready(function ()  {
