dashboard home page link and home page adjustment

--- a/data_process.html
+++ b/data_process.html
@@ -358,27 +358,16 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-<<<<<<< HEAD
       <a href="mental_illness_report.html">Mental Illness</a>
-=======
-      <a href="analysis/exploratory_analysis/mental_illness_report.html">Mental Illness</a>
-    </li>
-    <li>
-      <a href="analysis/exploratory_analysis/anxiety_report.html">Anxiety</a>
->>>>>>> 9705444e71bc91a9cc17e6870868f7cf4741130f
     </li>
     <li>
       <a href="anxiety_report.html">Anxiety</a>
     </li>
     <li>
-<<<<<<< HEAD
       <a href="depression_report.html">Depression</a>
     </li>
     <li>
       <a href="suicide_report.html">Suicide</a>
-=======
-      <a href="analysis/exploratory_analysis/suicide_report.html">Suicide</a>
->>>>>>> 9705444e71bc91a9cc17e6870868f7cf4741130f
     </li>
   </ul>
 </li>
@@ -408,27 +397,17 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-<<<<<<< HEAD
-      <a href="mental_dashboard.html">Mental Illness</a>
-=======
-      <a href="analysis/dashbboards/mental_dashboard.html">Mental Illness</a>
+      <a href="./dashboard/mental_dashboard.html">Mental Illness</a>
     </li>
     <li>
-      <a href="analysis/dashbboards/anxiety_trend_dashboard.html">Anxiety Trend</a>
->>>>>>> 9705444e71bc91a9cc17e6870868f7cf4741130f
+      <a href="./dashboard/anxiety_trend_dashboard.html">Anxiety Trend</a>
     </li>
     <li>
-      <a href="anxiety_trend_dashboard.html">Anxiety Trend</a>
+      <a href="./dashboard/depression_trend_dashboard.html">Depression Trend</a>
     </li>
     <li>
-      <a href="depression_trend_dashboard.html">Depression Trend</a>
+      <a href="./dashboard/suicide_dashboard.html">Suicide Trend</a>
     </li>
-<<<<<<< HEAD
-    <li>
-      <a href="suicide_dashboard.html">Suicide Trend</a>
-    </li>
-=======
->>>>>>> 9705444e71bc91a9cc17e6870868f7cf4741130f
   </ul>
 </li>
 <li>
