--- a/suicide_model.html
+++ b/suicide_model.html
@@ -399,16 +399,16 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="mental_dashboard.html">Mental Illness</a>
+      <a href="./dashboard/mental_dashboard.html">Mental Illness</a>
     </li>
     <li>
-      <a href="anxiety_trend_dashboard.html">Anxiety Trend</a>
+      <a href="./dashboard/anxiety_trend_dashboard.html">Anxiety Trend</a>
     </li>
     <li>
-      <a href="depression_trend_dashboard.html">Depression Trend</a>
+      <a href="./dashboard/depression_trend_dashboard.html">Depression Trend</a>
     </li>
     <li>
-      <a href="suicide_dashboard.html">Suicide Trend</a>
+      <a href="./dashboard/suicide_dashboard.html">Suicide Trend</a>
     </li>
   </ul>
 </li>
