change quiz name and add pics

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ src="image/3.jpg" height="200" alt="3" /></a></th>
 <td align="center"><a
 href="analysis/project_report.html"><em>Motivation</em></a></td>
 <td align="center"><a href="analysis/project_report.html"><em>Mental
-Health Self-Diagnosis</em></a></td>
+Health Quiz</em></a></td>
 <td align="center"><a href="analysis/project_report.html"><em>Data
 Source</em></a></td>
 </tr>
@@ -436,15 +436,15 @@ medication and COVID-19 exposure?</li>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
 </div>
-<div id="mental-health-self-diagnosis" class="section level3">
-<h3>Mental Health Self-Diagnosis</h3>
+<div id="mental-health-quiz" class="section level3">
+<h3>Mental Health Quiz</h3>
 <p>There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
 quiz and see if you can separate the myths from the facts.</p>
 <p><a href="https://www.cdc.gov/mentalhealth/quiz/index.htm">Mental
 Health Quiz</a></p>
-<p><img src="image/mental health quiz pics.png" alt="drawing" longth="650" width="500"></p>
+<p><img src="image/mental%20health%20quiz%20pics.png" alt="drawing" longth="650" width="500"></p>
 </div>
 <div id="our-team" class="section level3">
 <h3>Our Team</h3>
