--- a/index.html
+++ b/index.html
@@ -438,13 +438,15 @@ href="mental_illness.html">mental illness</a>!</p>
 </div>
 <div id="mental-health-quiz" class="section level3">
 <h3>Mental Health Quiz</h3>
-<p>There are still many harmful attitudes and misunderstandings around
+There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
-quiz and see if you can separate the myths from the facts.</p>
-<p><a href="https://www.cdc.gov/mentalhealth/quiz/index.htm">Mental
-Health Quiz</a></p>
-<p><img src="image/mental%20health%20quiz%20pics.png" alt="drawing" longth="650" width="500"></p>
+quiz and see if you can separate the myths from the facts.
+<p align="center">
+<a href="https://www.cdc.gov/mentalhealth/quiz/index.htm"><img
+src="image/mental%20health%20quiz%20pics.png" length="650" width="800"
+alt="Mental Health Quiz" /></a>
+</p>
 </div>
 <div id="our-team" class="section level3">
 <h3>Our Team</h3>
