add report repository

--- a/data_process.html
+++ b/data_process.html
@@ -334,6 +334,12 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
+  <a href="https://github.com/yifang2605/P8105_final_project">
+    <span class="fa fa-github fa-lg"></span>
+     
+  </a>
+</li>
+<li>
   <a href="https://github.com/KellyLuo233/mental_illness.github.io.git">
     <span class="fa fa-github fa-lg"></span>
      
