index page adjustment

--- a/index.html
+++ b/index.html
@@ -373,8 +373,15 @@ $(document).ready(function () {
 </div>
 
 
+<style type="text/css">
+.main-container {
+  max-width: 80%;
+  margin: auto;
+}
+</style>
 <div id="welcome-to-our-project-for-p8105" class="section level2">
 <h2>Welcome to Our Project for P8105!</h2>
+<hr />
 <table>
 <colgroup>
 <col width="33%" />
@@ -383,41 +390,41 @@ $(document).ready(function () {
 </colgroup>
 <thead>
 <tr class="header">
-<th align="center"><a href="analysis/project_report.html"><img
-src="image/1.jpg" height="200" alt="1" /></a></th>
-<th align="center"><a href="analysis/project_report.html"><img
-src="image/2.jpg" height="200" alt="2" /></a></th>
-<th align="center"><a href="analysis/project_report.html"><img
-src="image/3.jpg" height="200" alt="3" /></a></th>
+<th align="center"><img src="image/1.jpg" height="300" alt="1" /></th>
+<th align="center"><img src="image/2.jpg" height="300" alt="2" /></th>
+<th align="center"><img src="image/3.jpg" height="300" alt="3" /></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center"><a
-href="analysis/project_report.html"><em>Motivation</em></a></td>
-<td align="center"><a href="analysis/project_report.html"><em>Mental
-Health Quiz</em></a></td>
-<td align="center"><a href="analysis/project_report.html"><em>Data
-Source</em></a></td>
+<td align="center"><a href="#motivation"><span
+style="color:black; font-size:4em"><strong>Motivation</strong></span></a></td>
+<td align="center"><a href="#quiz"><span
+style="color:black; font-size:4em"><strong>Quiz</strong></span></a></td>
+<td align="center"><a href="project_report.html"><span
+style="color:black; font-size:4em"><strong>Data
+Source</strong></span></a></td>
 </tr>
 <tr class="even">
+<td align="center"><a href="project_report.html"><img src="image/4.jpg"
+height="300" alt="4" /></a></td>
 <td align="center"><a href="analysis/project_report.html"><img
-src="image/4.jpg" height="200" alt="4" /></a></td>
+src="image/5.jpg" height="300" alt="5" /></a></td>
 <td align="center"><a href="analysis/project_report.html"><img
-src="image/5.jpg" height="200" alt="5" /></a></td>
-<td align="center"><a href="analysis/project_report.html"><img
-src="image/6.jpg" height="200" alt="6" /></a></td>
+src="image/6.jpg" height="300" alt="6" /></a></td>
 </tr>
 <tr class="odd">
-<td align="center"><a
-href="analysis/project_report.html"><em>4</em></a></td>
-<td align="center"><a
-href="analysis/project_report.html"><em>5</em></a></td>
-<td align="center"><a href="analysis/project_report.html"><em>Our
-Team</em></a></td>
+<td align="center"><a href="analysis/project_report.html"><span
+style="color:black; font-size:4em"><strong>4</strong></span></a></td>
+<td align="center"><a href="project_report.html"><span
+style="color:black; font-size:4em"><strong>5</strong></span></a></td>
+<td align="center"><a href="#team"><span
+style="color:black; font-size:4em"><strong>Our
+Team</strong></span></a></td>
 </tr>
 </tbody>
 </table>
+<hr />
 <div id="motivation" class="section level3">
 <h3>Motivation</h3>
 <p>Mental health is an important part of overall health and well-being.
@@ -442,7 +449,7 @@ medication and COVID-19 exposure?</li>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
 </div>
-<div id="mental-health-quiz" class="section level3">
+<div id="quiz" class="section level3">
 <h3>Mental Health Quiz</h3>
 There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
@@ -454,7 +461,7 @@ src="image/mental%20health%20quiz%20pics.png" length="650" width="800"
 alt="Mental Health Quiz" /></a>
 </p>
 </div>
-<div id="our-team" class="section level3">
+<div id="team" class="section level3">
 <h3>Our Team</h3>
 <p><strong>Fei Xiao, Kelly Luo, Tongtong Zhu, Yi Fang, Yujie
 Huang</strong></p>
