text appearance adjustment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -236,9 +235,6 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
-<style type="text/css">
-.code-folding-btn { margin-bottom: 4px; }
-</style>
 
 
 
@@ -358,14 +354,6 @@ $(document).ready(function () {
 
 <div id="header">
 
-<div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
-<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
-<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
-<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
-</ul>
-</div>
-
 
 
 <h1 class="title toc-ignore">Mental Health Post COVID-19 Pandemic</h1>
@@ -378,9 +366,32 @@ $(document).ready(function () {
   max-width: 80%;
   margin: auto;
 }
+
+h1.title {
+  font-size: 60px;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+}
+h1 { 
+  font-size: 50px;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+}
+body{ 
+  font-size: 20px;
+}
+a{
+  color: black;
+  font-weight: bold;
+}
+
 </style>
-<div id="welcome-to-our-project-for-p8105" class="section level2">
-<h2>Welcome to Our Project for P8105!</h2>
+<center>
+<span style="color: grey; font-size:3em"><strong>Welcome to Our Project
+for P8105!</strong></span>
+</center>
 <hr />
 <table>
 <colgroup>
@@ -398,12 +409,11 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="center"><a href="#motivation"><span
-style="color:black; font-size:4em"><strong>Motivation</strong></span></a></td>
+style="font-size:45px">Motivation</span></a></td>
 <td align="center"><a href="#quiz"><span
-style="color:black; font-size:4em"><strong>Quiz</strong></span></a></td>
+style="font-size:45px">Quiz</span></a></td>
 <td align="center"><a href="project_report.html"><span
-style="color:black; font-size:4em"><strong>Data
-Source</strong></span></a></td>
+style="font-size:45px">Data Source</span></a></td>
 </tr>
 <tr class="even">
 <td align="center"><a href="project_report.html"><img src="image/4.jpg"
@@ -415,18 +425,17 @@ src="image/6.jpg" height="300" alt="6" /></a></td>
 </tr>
 <tr class="odd">
 <td align="center"><a href="analysis/project_report.html"><span
-style="color:black; font-size:4em"><strong>4</strong></span></a></td>
+style="font-size:45px">4</span></a></td>
 <td align="center"><a href="project_report.html"><span
-style="color:black; font-size:4em"><strong>5</strong></span></a></td>
-<td align="center"><a href="#team"><span
-style="color:black; font-size:4em"><strong>Our
-Team</strong></span></a></td>
+style="font-size:45px">5</span></a></td>
+<td align="center"><a href="#team"><span style="font-size:45px">Our
+Team</span></a></td>
 </tr>
 </tbody>
 </table>
 <hr />
-<div id="motivation" class="section level3">
-<h3>Motivation</h3>
+<div id="motivation" class="section level1">
+<h1>Motivation</h1>
 <p>Mental health is an important part of overall health and well-being.
 Mental health includes our emotional, psychological, and social
 well-being. Mental health problems exist frequently throughout the
@@ -449,8 +458,8 @@ medication and COVID-19 exposure?</li>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
 </div>
-<div id="quiz" class="section level3">
-<h3>Mental Health Quiz</h3>
+<div id="quiz" class="section level1">
+<h1>Mental Health Quiz</h1>
 There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
@@ -461,11 +470,39 @@ src="image/mental%20health%20quiz%20pics.png" length="650" width="800"
 alt="Mental Health Quiz" /></a>
 </p>
 </div>
-<div id="team" class="section level3">
-<h3>Our Team</h3>
-<p><strong>Fei Xiao, Kelly Luo, Tongtong Zhu, Yi Fang, Yujie
-Huang</strong></p>
-</div>
+<div id="team" class="section level1">
+<h1>Our Team</h1>
+<table>
+<colgroup>
+<col width="23%" />
+<col width="12%" />
+<col width="21%" />
+<col width="21%" />
+<col width="21%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center"><a href="https://github.com/xiaof2">Fei Xiao</a></th>
+<th align="center"><a href="https://github.com/KellyLuo233">Kelly
+Luo</a></th>
+<th align="center"><a href="https://github.com/TongtongZhu12">Tongtong
+Zhu</a></th>
+<th align="center"><a href="https://github.com/yifang2605">Yi
+Fang</a></th>
+<th align="center"><a href="https://github.com/yh3429">Yujie
+Huang</a></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+</tbody>
+</table>
 </div>
 
 
@@ -501,11 +538,6 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
-<script>
-$(document).ready(function () {
-  window.initializeCodeFolding("hide" === "show");
-});
-</script>
 
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
