--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ h1.title {
 }
 h1 { 
   font-size: 50px;
-  text-align: center;
+  text-align: left;
   color: black;
   font-weight: bold;
 }
@@ -401,41 +401,58 @@ for P8105!</strong></span>
 </colgroup>
 <thead>
 <tr class="header">
-<th align="center"><img src="image/1.jpg" height="300" alt="1" /></th>
-<th align="center"><img src="image/2.jpg" height="300" alt="2" /></th>
-<th align="center"><img src="image/3.jpg" height="300" alt="3" /></th>
+<th align="center"><img src="image/utube.png" height="300"
+alt="video" /></th>
+<th align="center"><img src="image/1.jpg" height="300"
+alt="motivation" /></th>
+<th align="center"><img src="image/quiz.png" height="300"
+alt="quiz" /></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
+<td align="center"><a href="#web"><span style="font-size:45px">Website
+Intro</span></a></td>
 <td align="center"><a href="#motivation"><span
 style="font-size:45px">Motivation</span></a></td>
 <td align="center"><a href="#quiz"><span
 style="font-size:45px">Quiz</span></a></td>
-<td align="center"><a href="project_report.html"><span
-style="font-size:45px">Data Source</span></a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="project_report.html"><img src="image/4.jpg"
-height="300" alt="4" /></a></td>
+<td align="center"><a href="project_report.html"><img src="image/3.jpg"
+height="300" alt="data" /></a></td>
 <td align="center"><a href="analysis/project_report.html"><img
-src="image/5.jpg" height="300" alt="5" /></a></td>
+src="image/report.png" height="300" alt="report" /></a></td>
 <td align="center"><a href="analysis/project_report.html"><img
-src="image/6.jpg" height="300" alt="6" /></a></td>
+src="image/team.jpg" height="300" alt="team" /></a></td>
 </tr>
 <tr class="odd">
-<td align="center"><a href="analysis/project_report.html"><span
-style="font-size:45px">4</span></a></td>
+<td align="center"><a href="data_process.html"><span
+style="font-size:45px">Data Source</span></a></td>
 <td align="center"><a href="project_report.html"><span
-style="font-size:45px">5</span></a></td>
+style="font-size:45px">Report</span></a></td>
 <td align="center"><a href="#team"><span style="font-size:45px">Our
 Team</span></a></td>
 </tr>
 </tbody>
 </table>
+<p><span class="math inline">\(\quad\)</span> <span
+class="math inline">\(\quad\)</span></p>
+<div id="web" class="section level1">
+<h1>Website Introduction</h1>
 <hr />
+<center>
+<div class="container_video">
+<iframe width="800" height="500" src="https://www.youtube.com/embed/zNzZ1PfUDNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</div>
+</center>
+<p><span class="math inline">\(\quad\)</span> <span
+class="math inline">\(\quad\)</span></p>
+</div>
 <div id="motivation" class="section level1">
 <h1>Motivation</h1>
+<hr />
 <p>Mental health is an important part of overall health and well-being.
 Mental health includes our emotional, psychological, and social
 well-being. Mental health problems exist frequently throughout the
@@ -455,9 +472,12 @@ differ by state, age, sex and means?</li>
 <li>What is the association between taking depression or anxious
 medication and COVID-19 exposure?</li>
 </ul>
+<p><span class="math inline">\(\quad\)</span> <span
+class="math inline">\(\quad\)</span></p>
 </div>
 <div id="quiz" class="section level1">
 <h1>Mental Health Quiz</h1>
+<hr />
 There are still many harmful attitudes and misunderstandings around
 mental illness, which may make people ignore their mental health, fuel
 stigma, and make it harder to reach out for help. Take the following
@@ -469,9 +489,12 @@ alt="Mental Health Quiz" /></a>
 </p>
 <p>Let’s begin with the general status of <a
 href="mental_illness.html">mental illness</a>!</p>
+<p><span class="math inline">\(\quad\)</span> <span
+class="math inline">\(\quad\)</span></p>
 </div>
 <div id="team" class="section level1">
 <h1>Our Team</h1>
+<hr />
 <table>
 <colgroup>
 <col width="23%" />
