--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://youtube.com">
+  <a href="https://youtu.be/LCf-e-GY-w4">
     <span class="fa fa-play-circle fa-lg"></span>
      
   </a>
@@ -437,8 +437,18 @@ Team</span></a></td>
 </tr>
 </tbody>
 </table>
+<div id="web" class="section level1">
+<h1>Website Introduction</h1>
+<hr />
+<center>
+<div class="container_video">
+<iframe width="800" height="500" src="https://www.youtube.com/embed/LCf-e-GY-w4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</div>
+</center>
 <p><span class="math inline">\(\quad\)</span> <span
 class="math inline">\(\quad\)</span></p>
+</div>
 <div id="motivation" class="section level1">
 <h1>Motivation</h1>
 <hr />
