--- a/suicide_model.html
+++ b/suicide_model.html
@@ -40,7 +40,7 @@
 <link href="site_libs/lightable-0.0.1/lightable.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
-  <link rel="icon" type="image/png" href="image/icons-brain.png"/>
+  <link rel="icon" type="image/png" href="image/brain.png"/>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -348,7 +348,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://youtube.com">
+  <a href="https://youtu.be/LCf-e-GY-w4">
     <span class="fa fa-play-circle fa-lg"></span>
      
   </a>
